--- a/css/core.css
+++ b/css/core.css
@@ -26,7 +26,7 @@ body{
 	height: 100%;
 	width: 50%;
 	margin-left: 50%;
-	border: 0px; 
+	border-left: 1px solid #333333; 
     padding: 0px;
 }
 #editor{
